<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_main">
    <include layout="@layout/toolbar" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:lineSpacingExtra="8sp"
            android:onClick="openCreateUser"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="#3D8BCD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/emailET"
            android:layout_width="349dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:text="asoe@asoe.de"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameET"
            app:layout_constraintVertical_bias="0.017" />
        <Button
            android:id="@+id/loginBt"
            android:layout_width="159dp"
            android:layout_height="37dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_rounded"
            android:onClick="signInWithEmailAndPassword"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password1ET"
            app:layout_constraintVertical_bias="0.018" />
        <EditText
            android:id="@+id/password1ET"
            android:layout_width="349dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:text="garfield"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />
        <EditText
            android:id="@+id/nameET"
            android:layout_width="349dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:text="asoe"
            android:autofillHints=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>