...
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="sql_interface">SQL Interface</string>
    <string name="log_out">Log Out</string>
    <string name="textview">TextView</string>
    <string name="Get_Data">Get Data</string>
    <string name="SQL_Data">SQL Data</string>
    <string name="Flussstrom">Flussstrom</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Eingespeiste_Leistung">Eingespeiste Leistung</string>
...
